Fixing Hrefs Behind Proxy Issue, Adding Proxy Settings

--- a/Candlewire.Identity.Server/wwwroot/css/site.css
+++ b/Candlewire.Identity.Server/wwwroot/css/site.css
@@ -20,7 +20,7 @@ html {font-size: 14px;}
 /* Navbar styles */
 .navbar {position: fixed;width: 100%;z-index: 1000;background-color:white;border-bottom:1px solid #EEEEEE;}
 .navbar-brand {width: 200px;height: 50px;padding:0px;}
-.navbar-logo {background-image: url("/images/logo-small.png");background-repeat: no-repeat;background-size: 200px 50px;width: 200px;height: 50px;}
+.navbar-logo {background-image: url("../images/logo-small.png");background-repeat: no-repeat;background-size: 200px 50px;width: 200px;height: 50px;}
 .nav-link {height:40px;}
 .nav-link a {border-top:none;color:black;}
 
